--- a/content/posts/os6-2.md
+++ b/content/posts/os6-2.md
@@ -1,10 +1,10 @@
 ---
 date: '2025-04-02T02:16:00+08:00'
 title: '操作系统复习·锁'
-summary: '作为无畏并发的基本手段，有必要复习一下设计锁的方法。'
+summary: '作为无畏并发的基本手段，锁为我们提供了互斥性，让我们对并发产生的结果更加确定。'
 ---
 
-> 我，无畏并发。 《BanG Dream! Ave Mujica》（大嘘）
+> 我，无畏并发。 ——也许存在于某个平行宇宙的《BanG Dream! Ave Mujica》（但大概率也是烂番）
 
 ### 零、一些基本的讨论
 
@@ -70,6 +70,7 @@ void unlock(lock *lock) {
 先冷静一下，这样做对单处理器非抢占式系统是不行的，因为一旦无法获得锁，那就只能在那里空转，一切都没有办法停下来。但是还好这些系统已经不复存在，在多处理器这套办法工作的不错。
 
 ### 二、compare-and-exchange
+
 先来看与硬件原语近似的代码：
 ```c
 int COMPARE_AND_EXCHANGE(int* ptr, int expected, int new) {
@@ -204,3 +205,19 @@ void mutex_unlock(int *mutex) {
     futex_wake(mutex);
 }
 ```
+
+### 六、使用锁
+
+最显然的使用锁的方法被称作“一把大锁保平安”。对核心数据结构的修改和读取应当在加了锁的情况下再去进行。
+
+“一把大锁保平安”足够简单，但如果遇到了性能瓶颈，那应该考虑进行一些性能优化。（过早优化是万恶之源。）
+
+另外，要小心控制流！如果不在特殊控制流（例如错误处理）的时候释放锁，可能造成死锁的情况。
+
+#### （一）计数器
+
+我们这样设计：给每个 CPU Core 准备一个局部计数器和对应的局部锁，每个 Core 上的计数器修改会在局部计数器上进行。当局部计数器满足一定阈值 S 时，争夺全局锁，把结果加给全局计数器。通过阈值，我们平衡准确度和性能。
+
+#### （二）队列
+
+我们希望在队列头和队列尾的操作能够并行，那么准备两把锁是个好主意。为了不让头和尾的操作互相干扰，应该添加一个特殊的空白节点。
